<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_fragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/Home" />
    <item
        android:id="@+id/history_fragment"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/History" />
    <item
        android:id="@+id/update_fragment"
        android:icon="@drawable/ic_baseline_update_24"
        android:title="@string/Update" />
    <item
        android:id="@+id/favourite_fragment"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/Favourite" />
    <item
        android:id="@+id/setting_fragment"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/Settings" />
</menu>